@@ -2,16 +2,14 @@
 README
 ================
 
-doit - A task execution tool (build-tool)
-=========================================
+doit - automation tool
+======================
 
-doit is a build tool that focus not only on making/building things but on executing any kind of tasks in an efficient way. Designed to be easy to use and "get out of your way".
+`doit` comes from the idea of bringing the power of build-tools to execute any kind of task. It will keep track of dependencies between "tasks" and execute them only when necessary. It was designed to be easy to use and "get out of your way".
 
-doit like most build tools is used to execute tasks defined in a configuration file. Configuration files are python modules. The tasks can be python functions (or any callable) or an external shell script. doit automatically keeps track of declared dependencies executing only tasks that needs to be update (based on which dependencies have changed).
+In `doit`, unlike most (all?) build-tools, a task doesn't need to define a target file to use the execute only if not up-to-date feature. This make `doit` specially suitable for running test suites.
 
-In doit, unlike most(all?) build-tools, a task doesn't need to define a target file to use the execute only if not up-to-date feature. This make doit specially suitable for running test suites.
-
-doit can be used to perform any task or build anything, though it doesn't support automatic dependency discovery for any language.
+`doit` like most build tools is used to execute tasks defined in a configuration file. Configuration files are python modules. The tasks can be python functions or an external shell script/command. `doit` automatically keeps track of declared dependencies executing only tasks that needs to be update (based on which dependencies have changed).
 
 Author
 ======
@@ -44,7 +42,8 @@ Tools required for developement:
 - bazaar * VCS
 - epydoc * API doc generator
 - sphinx * doc tool
-
+- pyflakes * syntax checker
+- pychecker * syntax checker
 
 TESTS
 =====
